--- a/css/style.css
+++ b/css/style.css
@@ -858,7 +858,7 @@ body.no-scroll {
     box-shadow: 1px 1px 4px 0 #000;
 }
 
-.btn__form {
+.form__btn {
     width: 220px;
     height: 60px;
     background-color: #1d1e22;
@@ -878,7 +878,7 @@ body.no-scroll {
         border-radius: 5px 0 0 5px;
     }
 
-    .btn__form {
+    .form__btn {
         width: 100%;
         height: 45px;
         font-size: 20px;
